--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+                cabecera
+        </div>
         <div id="post">
           <h1>este es el titulo del post</h1>
-            <p>este es el parrafo de inicio donde vamos a aplicar las cosas increibles que pueden hacer con ramas</p>  
+            <p>este es el parrafo de inicio donde vamos a aplicar las 
+                cosas increibles que pueden hacer con ramas</p>  
         </div>
     </div>
     
