--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,10 @@
     <div id="container">
         <div id="post">
           <h1>este es el titulo del post</h1>
-            <p>este es el parrafo de inicio donde vamos a aplicar las cosas increibles que pueden hacer con ramas</p>  
+            <p>este es el parrafo de inicio donde vamos a aplicar las 
+                cosas increibles que pueden hacer con ramas</p>  
+                <p>los blogs son la mejor forma de compartir informacion
+                    y tus ideas, mucho mas que ir a confrrencias o salir en youtube</p>
         </div>
     </div>
     
