--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pequeño cambio en el titulo del post</title>
+    <title>pequeño cambio en el titulo del post #2</title>
     <link rel="stylesheet" href="CSS\estilos.css">
 </head>
 <body>
