--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
           <h1>este es el titulo del post</h1>
             <p>este es el párrafo de inicio donde vamos a aplicar las 
                 cosas increibles que pueden hacer con ramas</p>  
+                <p><img src="images/KTM790.png" width="100%"></p>
                 <p>los blogs son la mejor forma de compartir información y 
                     tus ideas, mucho mas que ir a conferencias o salir en youtube</p>
         </div>
